--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -4,12 +4,12 @@
 
 @font-face {
   font-family: 'Gilroy-Bold';
-  src: local('Gilroy-Bold');
+  src: local('Gilroy-Bold'), url(./fonts/Gilroy-Bold.ttf);
 }
 
 @font-face {
   font-family: 'Gilroy-Medium';
-  src: local('Gilroy-Medium');
+  src: local('Gilroy-Medium'), url(./fonts/Gilroy-Medium.ttf);;
 }
 
 
